ui-styles-compiled.css
/* ... */
/**
 * Ensure the default browser behavior of the `hidden` attribute.
 */

[hidden] {
  display: none;
}

*, ::before, ::after {
	--tw-translate-x: 0;
	--tw-translate-y: 0;
	--tw-rotate: 0;
	--tw-skew-x: 0;
	--tw-skew-y: 0;
	--tw-scale-x: 1;
	--tw-scale-y: 1;
	--tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
	--tw-border-opacity: 1;
	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
	--tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
	--tw-ring-offset-width: 0px;
	--tw-ring-offset-color: #fff;
	--tw-ring-color: rgba(59, 130, 246, 0.5);
	--tw-ring-offset-shadow: 0 0 #0000;
	--tw-ring-shadow: 0 0 #0000;
	--tw-shadow: 0 0 #0000;
	--tw-blur: var(--tw-empty,/*!*/ /*!*/);
	--tw-brightness: var(--tw-empty,/*!*/ /*!*/);
	--tw-contrast: var(--tw-empty,/*!*/ /*!*/);
	--tw-grayscale: var(--tw-empty,/*!*/ /*!*/);
	--tw-hue-rotate: var(--tw-empty,/*!*/ /*!*/);
	--tw-invert: var(--tw-empty,/*!*/ /*!*/);
	--tw-saturate: var(--tw-empty,/*!*/ /*!*/);
	--tw-sepia: var(--tw-empty,/*!*/ /*!*/);
	--tw-drop-shadow: var(--tw-empty,/*!*/ /*!*/);
	--tw-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
}
  * {
    box-sizing: border-box;
  }

  html {
    font-size: 14px;
  }

  html,
  body,
  #__next {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    overflow: hidden;
    font-family: 'Inter', sans-serif;
    background: black;
  }
.visible {
	visibility: visible;
}
.invisible {
	visibility: hidden;
}
.static {
	position: static;
}
.fixed {
	position: fixed;
}
.absolute {
	position: absolute;
}
.relative {
	position: relative;
}
.top-1\/2 {
	top: 50%;
}
.top-0 {
	top: 0px;
}
.left-0 {
	left: 0px;
}
.left-3\.5 {
	left: 20px;
}
.bottom-3\.5 {
	bottom: 20px;
}
.left-3 {
	left: 16px;
}
.bottom-3 {
	bottom: 16px;
}
.bottom-0 {
	bottom: 0px;
}
.z-10 {
	z-index: 10;
}
.mx-auto {
	margin-left: auto;
	margin-right: auto;
}
.mt-4 {
	margin-top: 26px;
}
.mb-1\.5 {
	margin-bottom: 10px;
}
.mb-1 {
	margin-bottom: 8px;
}
.block {
	display: block;
}
.inline-block {
	display: inline-block;
}
.flex {
	display: flex;
}
.grid {
	display: grid;
}
.h-3 {
	height: 16px;
}
.h-button {
	height: 55px;
}
.h-input {
	height: 34px;
}
.h-full {
	height: 100%;
}
.h-\[fit-content\] {
	height: -webkit-fit-content;
	height: -moz-fit-content;
	height: fit-content;
}
.h-slider {
	height: 2px;
}
.h-mark {
	height: 16px;
}
.h-thumb {
	height: 16px;
}
.h-\[66px\] {
	height: 66px;
}
.h-screen {
	height: 100vh;
}
.h-\[31px\] {
	height: 31px;
}
.h-\[300px\] {
	height: 300px;
}
.min-h-\[336px\] {
	min-height: 336px;
}
.w-2 {
	width: 12px;
}
.w-\[28\%\] {
	width: 28%;
}
.w-full {
	width: 100%;
}
.w-3 {
	width: 16px;
}
.w-\[90px\] {
	width: 90px;
}
.w-control-number-input {
	width: 53px;
}
.w-screen {
	width: 100vw;
}
.w-4 {
	width: 26px;
}
.w-mark {
	width: 2px;
}
.w-thumb {
	width: 16px;
}
.w-\[17px\] {
	width: 17px;
}
.w-\[47px\] {
	width: 47px;
}
.w-\[300px\] {
	width: 300px;
}
.flex-shrink-0 {
	flex-shrink: 0;
}
.-translate-y-1\/2 {
	--tw-translate-y: -50%;
	transform: var(--tw-transform);
}
.transform {
	transform: var(--tw-transform);
}
.cursor-pointer {
	cursor: pointer;
}
.resize {
	resize: both;
}
.flex-col {
	flex-direction: column;
}
.items-center {
	align-items: center;
}
.justify-center {
	justify-content: center;
}
.justify-between {
	justify-content: space-between;
}
.justify-around {
	justify-content: space-around;
}
.gap-3\.5 {
	gap: 20px;
}
.gap-3 {
	gap: 16px;
}
.gap-2 {
	gap: 12px;
}
.gap-1 {
	gap: 8px;
}
.gap-1\.5 {
	gap: 10px;
}
.gap-0\.5 {
	gap: 6px;
}
.gap-0 {
	gap: 0px;
}
.overflow-hidden {
	overflow: hidden;
}
.truncate {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}
.rounded {
	border-radius: 9px;
}
.rounded-full {
	border-radius: 9999px;
}
.rounded-md {
	border-radius: 11px;
}
.rounded-sm {
	border-radius: 4px;
}
.border {
	border-width: 1px;
}
.bg-primary {
	--tw-bg-opacity: 1;
	background-color: rgba(255, 67, 10, var(--tw-bg-opacity));
}
.bg-controls-panel-mobile {
	background-color: rgba(245, 245, 245, 0.2);
}
.bg-red-500 {
	--tw-bg-opacity: 1;
	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
}
.bg-opacity-10 {
	--tw-bg-opacity: 0.1;
}
.bg-opacity-0 {
	--tw-bg-opacity: 0;
}
.bg-opacity-80 {
	--tw-bg-opacity: 0.8;
}
.p-3\.5 {
	padding: 20px;
}
.p-3 {
	padding: 16px;
}
.text-center {
	text-align: center;
}
.text-xl {
	font-size: 1.25rem;
}
.text-base {
	font-size: 1rem;
}
.font-medium {
	font-weight: 500;
}
.font-semibold {
	font-weight: 600;
}
.text-primary {
	--tw-text-opacity: 1;
	color: rgba(255, 67, 10, var(--tw-text-opacity));
}
.text-white {
	--tw-text-opacity: 1;
	color: rgba(255, 255, 255, var(--tw-text-opacity));
}
.text-opacity-20 {
	--tw-text-opacity: 0.2;
}
.text-opacity-100 {
	--tw-text-opacity: 1;
}
.underline {
	text-decoration: underline;
}
.opacity-0 {
	opacity: 0;
}
.opacity-preview-btn {
	opacity: .17;
}
.outline-none {
	outline: 2px solid transparent;
	outline-offset: 2px;
}
.ring-1 {
	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
}
.ring {
	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
}
.ring-primary {
	--tw-ring-opacity: 1;
	--tw-ring-color: rgba(255, 67, 10, var(--tw-ring-opacity));
}
/* ... */

